[FIX] Images not showing in mobile browsers due to z-index [IMP] IntroJS for argument_show

--- a/app/assets/stylesheets/briarcliff/_box.scss
+++ b/app/assets/stylesheets/briarcliff/_box.scss
@@ -162,7 +162,6 @@
   width: 100%;
   background-size: cover;
   background-position: center;
-  z-index: -1;
   @include transition(.2s);
   &:hover{
     opacity: .8;
