--- a/app/assets/stylesheets/briarcliff/_cover.scss
+++ b/app/assets/stylesheets/briarcliff/_cover.scss
@@ -23,6 +23,7 @@
   background-position: center;
   height: 100%;
   height: 16.8em;
+  z-index: 1;
 }
 
 .cover .cover-image{
